Thu Mar 23 15:09:22 2000  Jody Hagins <jody@atdesk.com>

        * ace/Object_Manager.cpp (ACE_Static_Object_Lock::instance):
          with ACE_SHOULD_MALLOC_STATIC_OBJECT_LOCK #defined,
          use ACE_RETURN_NEW instead of ACE_RETURN so that a value
          is returned by the function.

Thu Mar 23 10:39:23 2000  Carlos O'Ryan  <coryan@uci.edu>

        * bin/g++dep:
          Changed the script to generate relative paths for local
          dependencies.  In other words if .obj/foo.o in the foo/bar
          directory depends on $(ACE_ROOT)/foo/bar/foo.h we just generate
          .obj/foo.o: foo.h
          instead of the full path.  This solves some problems with
          parallel builds and IDL generated files.

Thu Mar 23 04:31:50 2000  Irfan Pyarali  <irfan@cs.wustl.edu>

        * ace/Reactor.i (register_handler): There was a very subtle bug in
          all versions of <register_handler>.  The problem was that once
          the <event_handler> has been successfully registered with the
          Reactor, it is available for processing events.  In the problem
          case, input arrived from the client, the handler handled it, and
          eventually closed down.  All this happened in the other thread
          running the Reactor, and all before this line got executed:

              event_handler->reactor (this);

          By the time this thread came around to set the <reactor>, the
          <event_handler> had packed up and gone home. The fix is to set
          the <reactor> before registering the <event_handler> with the
          <reactor>.  Thanks to Steve Huston for report this bug.

Wed Mar 22 12:01:22 2000  Steve Huston  <shuston@riverace.com>

        * ace/NT_Service.{h i cpp}: Added support for operating on services
          on a host other than the local host. Thanks to Stephen Moon
          <smoon@oxmol.co.uk> for adding this new functionality!

Wed Mar 22 10:19:47 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
